--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Hanan Osman",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "handlebars": "^4.7.7",
+    "mongoose": "^5.13.3",
     "nodemon": "^2.0.12"
   }
 }
